--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 .title-main {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 24px;
@@ -68,7 +68,7 @@ body {
 	max-width: 10rem;
 }
 .cart .item .body .name {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 12px;
@@ -77,7 +77,7 @@ body {
 	cursor: pointer;
 }
 .cart .item .body .price {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 14px;
@@ -88,7 +88,7 @@ body {
 	margin-right: 0.5rem;
 }
 .cart .item .body .old-price {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 10px;
@@ -120,7 +120,7 @@ body {
 	color: #828282;
 }
 .cart .item .body .quantity h3 {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 16px;
@@ -129,7 +129,7 @@ body {
 }
 .cart .payment {
 	margin-top: 2rem;
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 14px;
@@ -150,7 +150,7 @@ body {
 }
 /* checkout form */
 .checkout section h4 {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 14px;
@@ -159,7 +159,7 @@ body {
 	margin: 0.5rem 0;
 }
 .checkout section label {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 10px;
@@ -179,7 +179,7 @@ body {
 	border-radius: 12px;
 	font-weight: 600;
 	padding-left: 3rem;
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 }
 .input-field .material-icons {
 	position: absolute;
@@ -188,7 +188,7 @@ body {
 	color: #828282;
 }
 .input-field input::placeholder {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-size: 12px;
 	line-height: 15px;
@@ -221,7 +221,7 @@ body {
 	margin-left: 0.5rem;
 }
 #saveinfo {
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 10px;
@@ -234,7 +234,7 @@ body {
 	background: #f2994a;
 	border-radius: 12px;
 	border: none;
-	font-family: Montserrat;
+	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 16px;
